--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jquery",
+  "name": "bower-asset/jquery",
   "title": "jQuery",
   "description": "JavaScript library for DOM operations",
   "version": "3.6.0",
